[gd_scene load_steps=6 format=3 uid="uid://deeaant2xoipp"]

[ext_resource type="Script" path="res://NPCs/Fortuna.gd" id="1_cxqq8"]
[ext_resource type="Texture2D" uid="uid://cy4snolte11c2" path="res://assets/characters/Fortuna.png" id="2_7lw7f"]
[ext_resource type="PackedScene" uid="uid://dr4xh7g0ik0yx" path="res://dialogue/dialogue.tscn" id="3_m7cod"]

[sub_resource type="CircleShape2D" id="CircleShape2D_wuxr4"]

[sub_resource type="CircleShape2D" id="CircleShape2D_u26sa"]

[node name="Fortuna" type="Area2D"]
script = ExtResource("1_cxqq8")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_7lw7f")

[node name="chat_detection_area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="chat_detection_area"]
shape = SubResource("CircleShape2D_wuxr4")

[node name="Dialogue" parent="chat_detection_area" instance=ExtResource("3_m7cod")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_u26sa")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_entered" from="chat_detection_area" to="." method="_on_chat_detection_area_body_entered"]
